tests/integration/snapshots/integration__conformance__n_number_hex_1_digit.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
[0x1]
stdout ---

stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:3
  |
1 | [0x1]
  |   ^
