tests/integration/snapshots/integration__conformance__n_number_hex_1_digit.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[0x1]
stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:3
  |
1 | [0x1]
  |   ^
