tests/integration/snapshots/integration__conformance__n_number_invalid-negative-real.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[-123.123foo]
stderr ---
error: unexpected character `f`. expected start of a json value
 --> stdin:1:10
  |
1 | [-123.123foo]
  |          ^
